--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ input[type="radio"] {
     margin-right: 5px;
 }
 
-button {
+input[type="submit"] {
     display: block;
     width: 100%;
     padding: 10px;
@@ -49,8 +49,10 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    float: none;
+    white-space:  nowrap;
 }
 
-button:hover {
+input[type="submit"]:hover {
     background-color: #0056b3;
 }
