--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,11 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+.required {
+    color: red;
+}
+
+.message { 
+    text-align: center;
+}
